# kernelboard

./: .gitignore  CLAUDE.md  Procfile  README.md  SECURITY.md  app.json  blogging.md  docker-compose.dev.yml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  ranking_worker.py  requirements.txt  tailwind.config.js  test_notification.py
.github/workflows/: ci.yml  review-app-comment.yml  test.yml
.llms/skills/: caching.md
docs/: review-apps-setup.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.js  App.test.tsx  App.tsx  index.css  main.js
kernelboard/: __init__.py  auth.py  color.py  db.py  env.py  error.py  health.py  index.py  leaderboard.py  news.py  og_tags.py  redis_connection.py  time.py
kernelboard/api/: __init__.py  auth.py  events.py  leaderboard.py  leaderboardMetadata.py  leaderboard_metadata.py  leaderboard_summaries.py  news.py  submission.py
kernelboard/lib/: auth_utils.py  db.py  env.py  error.py  file_handler.py  frontend_redirect.py  logging.py  rate_limiter.py  redis_connection.py  score.py  status_code.py  time.py
kernelboard/templates/: 401.html  404.html  500.html  base.html  index.html  leaderboard.html  login.html  news.html
tests/: HEROKU_SCHEMA_CLONE_GUIDE.md  conftest.py  data.sql  data_inserts_only.sql  test_auth.py  test_color.py  test_db.py  test_flash.py  test_health.py  test_index.py  test_leaderboard.py  test_news.py  test_redis.py  test_score.py  test_time.py
(+150 files in other folders)
