[project]
name = "kernelboard"
version = "0.0.0"
description = "Kernelboard is a webapp for GPU MODE."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["migrations", "static", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
